--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,11 @@ optional = true
 version = "1.0.33"
 features = ["proc-macro"]
 
+[dependencies.proc-macro2]
+version = "1.0.67"
+
 [features]
-default = ["logit", "original-compatibility", "strict-syntax", "and-time"]
+default = ["logit", "original-compatibility", "strict-syntax", "and-time", "chrono-backend"]
 logit = ["log"]
 panic = []
 compile-error = []
