--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,8 @@ optional = true
 version = "1.0.33"
 features = ["proc-macro"]
 
-[dependencies.proc-macro2]
-version = "1.0.67"
-
 [features]
-default = ["logit", "original-compatibility", "strict-syntax", "and-time", "chrono-backend"]
+default = ["logit", "original-compatibility", "strict-syntax", "and-time", "time-backend"]
 logit = ["log"]
 panic = []
 compile-error = []
