--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-todo-or-die = { path = "../", version = "0"}
+todo2 = { path = "../", version = "0"}
