--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,4 +44,8 @@ and-time = []
 [lib]
 proc-macro = true
 path = "src/lib.rs"
+doc-scrape-examples = false
 
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
+rustdoc-args = ["--generate-link-to-definition"]
