--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -6,7 +6,7 @@ pull_request_rules:
       merge:
         method: squash
 
-  - name: Automatic update to the main branch for pull requests
+  - name: Automatic update to the aurora branch for pull requests
     conditions:
       - -conflict # skip PRs with conflicts
       - -draft # skip GH draft PRs
@@ -19,4 +19,4 @@ pull_request_rules:
       - "#approved-reviews-by>=1"
     actions:
       merge:
-        method: merge
+        method: squash
