--- a/committed.toml
+++ b/committed.toml
@@ -16,3 +16,15 @@ line_length = 0
 subject_length = 0
 # Ignore the following authors
 ignore_author_re="(dependabot|renovate)"
+# Allow the following types
+allowed_types = [
+    "fix",
+    "feat",
+    "chore",
+    "docs",
+    "style",
+    "refactor",
+    "perf",
+    "test",
+    "ci",
+]
